Adding GraphQL support and sample

--- a/artifacts/stet.eu/stet.eu.package.yml
+++ b/artifacts/stet.eu/stet.eu.package.yml
@@ -16,24 +16,31 @@ metadata:
 spec:
   maturity: alpha
   description: '
-    Created accordingly to the new Payment Services Directive (PSD2), this API intends
+    Created accordingly to the new Payment Services Directive (**PSD2**), this API intends
     to provide an interface between
-    - Account Servicing Payment Service Providers (ASPSP)
-    - Third Party (Payment Service) Providers (TPP)
+
+    - Account Servicing Payment Service Providers (**ASPSP**)
+
+    - Third Party (Payment Service) Providers (**TPP**)
+
 
     TPP may act with different roles as described below:
-    - Account Information Service Providers (AISP)
-    - Payment Initiation Service Providers (PISP)
-    - Card Based Payment Instrument Issuers (CBPII)
 
-    The Payment Service User (PSU) is the owner of the accounts held by the
-    ASPSP and gives accreditations to the TPP in order to access his accounts
-    information or initiates payment from these accounts
+    - Account Information Service Providers (**AISP**)
 
-    The API is designed on a REST model using JSON structures.
+    - Payment Initiation Service Providers (**PISP**)
 
-    The Richardson Maturity Model is applied on level three using HAL HYPERMEDIA
-    links
+    - Card Based Payment Instrument Issuers (**CBPII**)
+
+
+    The Payment Service User (PSU) is the owner of the accounts held by theASPSP and gives accreditations to the TPP in order to access his accounts
+    information or initiates payment from these accounts.
+
+
+    The API is designed on a `REST` model using `JSON` structures.
+
+
+    The Richardson Maturity Model is applied on level three using HAL HYPERMEDIA links.
   '
   apis:
     - name: psd2
