--- a/.github/workflows/validate-artifacts.yml
+++ b/.github/workflows/validate-artifacts.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - '.github/**'
+      - '.gitignore'
+      - 'LICENSE'
+      - '*.md'
 
 jobs:
   validate-artiffacts:
